--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,14 @@ services:
     
 #before_install:
 #  - cp .travis.settings.xml $HOME/.m2/settings.xml    
+
+script:
+    - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V   
     
 before_install:
     - docker build -t subhajit1985/docker-spring-boot-aws . 
 
-script:
-    - ./mvnw clean install -B       
+    
 
 deploy: 
     provider : elasticbeanstalk
