--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ services:
 #before_install:
 #  - cp .travis.settings.xml $HOME/.m2/settings.xml    
 
-script:
-    - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V   
     
 before_install:
     - docker build -t subhajit1985/docker-spring-boot-aws . 
 
-    
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V    
 
 deploy: 
     provider : elasticbeanstalk
